Beyond errno slides

--- a/2023.md
+++ b/2023.md
@@ -42,3 +42,6 @@ error:
     return 1; 
 }
 ```
+
+## Presentation on Error Handling in C
+Came across these nice [slides](https://resources.sei.cmu.edu/asset_files/Presentation/2016_017_101_484207.pdf).
