--- a/2023.md
+++ b/2023.md
@@ -31,6 +31,8 @@ int vparams_create(vaparams_t *vp, int count, int nprocs) {
         displacements[i] = running_displ;
         running_displ += sendcounts[i];
     }
+
+    // scatter the remaining uniformly between the first `rem` bins
     for (int i = 0; i < rem; i++)
     {
         sendcounts[i]++;
