Fix some embarrassing mistakes

--- a/2023.md
+++ b/2023.md
@@ -1,7 +1,7 @@
 # 2023-01-14
 ## `MPI_Scatterv`, `MPI_Gattherv` and `MPI_Allgatherv`
 The common thread between these three (and perhaps more) collective
-communication functions are the two buffers `sendcounts` and `displacements` (see `man 3 MPI_Gatherv` or [view online](https://www.open-mpi.org/doc/v3.1/man3/MPI_Gatherv.3.php)).
+communication functions are the two buffers `sendcounts` and `displs` (see `man 3 MPI_Gatherv` or [view online](https://www.open-mpi.org/doc/v3.1/man3/MPI_Gatherv.3.php)).
 
 I found myself writing code to construct these two buffers every
 time for roughly equal distribution. Here is the convenience function.
@@ -17,18 +17,20 @@ typedef struct {
     int *displs;
 } vparams_t;
 
-int vparams_create(vaparams_t *vp, int count, int nprocs) {
+int vparams_create(vparams_t *vp, int count, int nprocs) {
     int *sendcounts = malloc(sizeof(int) * nprocs);
     check_mem(sendcounts);
     int *displs = malloc(sizeof(int) * nprocs);
-    check_mem(displacements);
+    check_mem(displs);
+    // I hope the compiler generates a single div
+    // instruction for these
     int quot = count / nprocs;
-    int rem = count % nprocs
+    int rem = count % nprocs;
     int running_displ = 0;
     for (int i = 0; i < nprocs; i++)
     {
         sendcounts[i] = quot;
-        displacements[i] = running_displ;
+        displs[i] = running_displ;
         running_displ += sendcounts[i];
     }
 
@@ -38,7 +40,7 @@ int vparams_create(vaparams_t *vp, int count, int nprocs) {
         sendcounts[i]++;
     }
     sp->sendcounts = sendcounts;
-    sp->displacements = displacements;
+    sp->displs = displs;
     return 0;
 error:
     return 1; 
