Yet another typo fix

--- a/2023.md
+++ b/2023.md
@@ -39,8 +39,8 @@ int vparams_create(vparams_t *vp, int count, int nprocs) {
     {
         sendcounts[i]++;
     }
-    sp->sendcounts = sendcounts;
-    sp->displs = displs;
+    vp->sendcounts = sendcounts;
+    vp->displs = displs;
     return 0;
 error:
     return 1; 
