Finally, correct implementation

--- a/2023.md
+++ b/2023.md
@@ -7,43 +7,36 @@ I found myself writing code to construct these two buffers every
 time for roughly equal distribution. Here is the convenience function.
 
 ```C
-#define check_mem(P) if ((P)==NULL) {                                                      \
-    fprintf(stderr, "[ERROR] %s.%d in function %s: OOM\n", __FILE__, __LINE__, __func__);  \
-    goto error;                                                                            \
-}
-
-typedef struct {
+typedef struct
+{
     int *sendcounts;
     int *displs;
 } vparams_t;
 
-int vparams_create(vparams_t *vp, int count, int nprocs) {
+int vparams_create(vparams_t *vp, int count, int nprocs)
+{
     int *sendcounts = malloc(sizeof(int) * nprocs);
     check_mem(sendcounts);
     int *displs = malloc(sizeof(int) * nprocs);
     check_mem(displs);
-    // I hope the compiler generates a single div
-    // instruction for these
     int quot = count / nprocs;
     int rem = count % nprocs;
     int running_displ = 0;
     for (int i = 0; i < nprocs; i++)
     {
-        sendcounts[i] = quot;
+        int sc = quot;
+        if (i < rem)
+            sc++;
+        sendcounts[i] = sc;
         displs[i] = running_displ;
-        running_displ += sendcounts[i];
+        running_displ += sc;
     }
 
-    // scatter the remaining uniformly between the first `rem` bins
-    for (int i = 0; i < rem; i++)
-    {
-        sendcounts[i]++;
-    }
     vp->sendcounts = sendcounts;
     vp->displs = displs;
     return 0;
 error:
-    return 1; 
+    return 1;
 }
 ```
 
