Entry on basics of `MPI_Cart_create`

--- a/2023.md
+++ b/2023.md
@@ -42,3 +42,37 @@ error:
 
 ## Presentation on Error Handling in C
 Came across these nice [slides](https://resources.sei.cmu.edu/asset_files/Presentation/2016_017_101_484207.pdf).
+
+# 2023-01-15
+## MPI - Basics of Creating Communicators and Process Topologies 
+As it turns out, you do not always have to fiddle around with index calculations to calculate the ranks of
+your neighbouring process(es). `MPI_Cart_create` and friends can handle some of that for you.
+
+Here is a minimum working example (MWE) for creating a 1D torus.
+```C
+#include <stdio.h>
+#include <stdlib.h>
+#include <mpi.h>
+#include <stdbool.h>
+
+int main(int argc, char *argv[])
+{
+    int rank, nprocs;
+    MPI_Comm commring;
+    MPI_Init(&argc, &argv);
+    MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
+    MPI_Comm_rank(MPI_COMM_WORLD, &rank);
+
+    int const period = 1, ndims = nprocs;
+    bool reorder = true;
+    MPI_Cart_create(MPI_COMM_WORLD, 1, &ndims, &period, reorder, &commring);
+    int left, right;
+    MPI_Cart_shift(commring, 0, 1, &left, &right);
+
+    fprintf(stderr, "rank %d: left neighbour: %d, right neighbour: %d\n", rank, left, right);
+    MPI_Finalize();
+    return 0;
+}
+```
+Please don't enable too many warning flags because we're ignoring a lot of return values. Higher dimensions are possible, but am yet
+to try it. Consider consulting the [man pages](https://www.open-mpi.org/doc/v4.1/man3/MPI_Cart_create.3.php) `man 3 MPI_Cart_create`.
