2023-01-16: first set of entries

--- a/2023.md
+++ b/2023.md
@@ -76,3 +76,56 @@ int main(int argc, char *argv[])
 ```
 Please don't enable too many warning flags because we're ignoring a lot of return values. Higher dimensions are possible, but am yet
 to try it. Consider consulting the [man pages](https://www.open-mpi.org/doc/v4.1/man3/MPI_Cart_create.3.php) `man 3 MPI_Cart_create`.
+
+This month I am doing a course that has an MPI assignment. Hence the entries on MPI.
+
+## Domain Decomposition Resources
+A relatively compact summary of Galerkin approximations, Sobolev spaces, and other preconditioning
+methods is given in the appendices of Toselli and Widlund's book. I should probably consolidate all info related to my thesis
+in a separate place
+
+# 2023-01-16
+## On Focus and Crises
+I started reading "Life on a Knife's Edge" by Dr Rahul Jandial. In chapter two, "Performance", Dr Jandial
+shares some information regarding staying calm and focused in stressful situations. The original text is
+an excellent account and what follows is merely a wattered down summary for my own reference later.
+
+**Alarm Overload**: More alarms are perceived than can be addressed.
+
+E.g. during the partial core meltdown at the Three Mile Island nuclear power plant, operators were disoriented by
+all the alarms and didn't know which alarms were the most pressing and which could be ignored.
+
+To respond quickly and effectively in a crisis, we need a way to bring order to the external alarms, to _find focus by ignoring
+emotional distractors_. When you are being inundated with stimuli, a cluster of neurons known as the basal glandia actively filter
+out what is deemed unimportant.
+
+Note the exact phrasing here -- it does not emphasise the important stimulus, but filters out the unimportant.
+Neural activity is lower in experts because they don't dial up the focus, but dial down the distraction and stress.
+The ability to be vigilant is built-in, but the ability to ignore must be cultivated.
+
+### Breathing Patterns, Brain Activity and Staying in Control
+Controlling your breathing is the most powerful weapon you have to strengthen your emotional regulation and improve your performance.
+Don't just use it as safety valve in times of crisis, but train it regularly. Dr Jandial noticed that other experienced surgeons used
+tape to seal their surgical masks to the bridge of their nose in prevent fogging the magnification lenses worn by them. Under pressure,
+your breathing becomes fast and heavy. Dr Jandial does not use tape because when his FOV fogs up, he knows that he is doing something wrong
+and needs to control his breath.
+
+The adaptive state that we tend to slip into during stressful situations is one of hyperventilation; the brain readies the lungs and
+diaphragm. Meditative breathing can moderate the electrical activity in the brain; your breathing patterns can steer your brain towards
+both breathing and calm.
+
+"I used the time to steady my breathing. In situations like this, I don't breathe more deeply, I breathe more slowly.
+Three seconds in; three seconds out. No sudden inhalation with mouth agape. I find it easier to pace my breathing by
+inhaling and exhaling through my nose."
+
+## (TODO) Customizing Broadcast in Julia
+High level overview. Broadcasting something that subtypes `AbstractArray` and implements its interface properly is somewhat
+easy. Other types can be non-trivial. This is my own understanding and could be incorrect. Once I have a working broadcast
+for a non-array type, I will put it in another daybook entry.
+
+Relevant types and methods.
+- `Broadcast.BroadcastStyle`: An empty struct specialized for your type. Dispatch on relevant binary methods to combine styles into destination styles
+- `Broadcast.Broadcasted`: A tree-like container for lazily evaluating a compound broadcasted expression 
+- `Broadcast.instantiate`: Takes a `Broadcast.Broadcasted` and figues out the final axes type and value
+- `Broadcast.materialize`: Performs the broadcast operation
+- `Base.copyto!(dest, ::Broadcast.Broadcasted)`: Method called by `materialize` to perform calculations and store results in destination style
