A little note on iterative solvers

--- a/2023.md
+++ b/2023.md
@@ -129,3 +129,16 @@ Relevant types and methods.
 - `Broadcast.instantiate`: Takes a `Broadcast.Broadcasted` and figues out the final axes type and value
 - `Broadcast.materialize`: Performs the broadcast operation
 - `Base.copyto!(dest, ::Broadcast.Broadcasted)`: Method called by `materialize` to perform calculations and store results in destination style
+
+# 2023-01-17
+## Iterative Solvers
+I should probably know the following Krylov subspace solvers like the back of my hand, and probably even be
+able to hammer out an implementations in Julia for using the `AbstractVectors` and `AbstractMatrix`
+interfaces/abstract types/concepts/whatever on a whim. Every time I need anything related to iterative solvers,
+I find myself studying them again. What is this? Ultra-mega-early onset of dementia? Do I have to make Anki cards
+for them?
+- Conjugate Gradient
+- Generalized Minimal RESidual (GMRES)
+Probably some more as well. See chapter 3 of "An Introduction to Domain Decomposition Methods" by Dolean, Jolivet and Nataf.
+See 
+- 
