--- a/2023.md
+++ b/2023.md
@@ -242,3 +242,11 @@ to get
  ["389.939", "196.293", "230161.304", "164102.709", "0.356", "0.934"]
 ```
 Disgusting. Just use `DataFrames.jl`.
+
+# 2023-01-19
+## Your Research and You
+The transcript of a talk by Richard Hamming at Bell Labs.
+
+https://www.cs.virginia.edu/~robins/YouAndYourResearch.html
+
+I will write a summary once I finish reading it.
