Entry on GPU programming optimization techniques

--- a/2023.md
+++ b/2023.md
@@ -250,3 +250,39 @@ The transcript of a talk by Richard Hamming at Bell Labs.
 https://www.cs.virginia.edu/~robins/YouAndYourResearch.html
 
 I will write a summary once I finish reading it.
+
+## Optimization Techniques for GPU Programming
+New paper dropped -- [https://dl.acm.org/doi/pdf/10.1145/3570638](https://dl.acm.org/doi/pdf/10.1145/3570638). 74 pages in total,
+26 pages of main content, remaining is appendix and references. This is a survey of 450(!) papers. It covers optimizations that GPU
+programmers can apply when using whatever programming language/model they use. Doing a first pass of the paper, I have come to realize
+that I should be doing a lot more GPU programming in my life. How does a guy incorporate more GPU programming in his work, hobby projects
+etc? How does a guy incorporate hobby projects in the first place while maintaining a good work-life balance? Perhaps I am not cut out
+for programming and should start working in Haldiram's or something.
+
+Well, anyway. I am incredibly grateful that this paper got accepted when it did.
+
+Some reminders about GPU architecture and programming models from the paper -- most of these should be familiar to anyone who has programmed
+(NVIDIA) GPUs for compute (and not necessarily graphics, I know nothing about graphics) before.
+
+- Streaming Multiprocessors (SMs) are organized into many cores and further consist of units like
+  - Floating Point Units (FPUs)
+  - Special Function Units (SFUs) for transcendental functions
+  - Load/store (LS) units
+- Threads are organized in a hierarchy
+  - 32 threads form a warp -- warps are the unit of scheduling and execute in lockstep
+  - Threads are grouped into blocks
+  - Blocks are grouped into a grid
+- Each block is "mapped" (scheduled?) to an SM (further reading -- [How the Fermi Thread Block Scheduler Works](https://www.cs.rochester.edu/~sree/fermi-tbs/fermi-tbs.html))
+- The compiler allocates registers on a per-thread basis depending on the kernel code. _Register spills go to device memory_
+- Long latency operations (e.g. load from device memory) in a warp can be hidden in two ways
+  - Thread-level parallelism (TLP) -- scheduling a ready warp
+  - Instruction Level Parallelism (ILP) -- scheduling an independent instruction stream in the same warp
+  I had no idea that GPU cores were ILP-capable. The paper mentions that even GPU vendors tend to leave this out.
+
+An aside starting  from the last point about ILP -- the literature that they mention to corroborate the ILP point is none other than Vasily
+Volkov's GTC 2010 presentation. His PhD dissertation was "Understanding latency hiding on GPUs", and I recall reading one of his papers titled 
+something along the lines of "Tuning Dense Linear Algebra on GPUs", which showed better dense linear algebra kernel performance at lower
+occupancies. I remember getting sidetracked towards Saavedra et al's pointer chase benchmarking paper around that time. I should consider
+picking Volkov's paper again.
+
+Will add more notes on specific optimizations when I read further.
