A few words about SICM and mechanics.sh

--- a/2023.md
+++ b/2023.md
@@ -286,3 +286,15 @@ occupancies. I remember getting sidetracked towards Saavedra et al's pointer cha
 picking Volkov's paper again.
 
 Will add more notes on specific optimizations when I read further.
+
+# 2023-01-20
+## SICM and Functional Differential Geometry
+These are two books co-authored by Gerald J. Sussman. He has made some
+[awesome utilities](http://groups.csail.mit.edu/mac/users/gjs/6946/installation.html) for (MIT) Scheme for the SICM book/course. Having
+been taught classical mechanics from Goldstein (I hated it), I have a feeling that SICM gets close to the best way of teaching classical
+mechanics and its mathematical formalisms.
+I would love to work through both books some day. Right now my naive/dumb self was hoping to get some functional analysis basics  out
+of "Functional Differential Geometry", but turns out they're quite different. 
+
+It would be nice to have scmutils in some form in Julia. Using Symbolics.jl? Or macros? A bit of both? I do not know which approach will be "good".
+Maybe I will try experimenting with them sometime soon $^\text{TM}$.
