Update summary of Hamming
It needs to be abriged even further to be called a summary

--- a/2023.md
+++ b/2023.md
@@ -251,6 +251,29 @@ https://www.cs.virginia.edu/~robins/YouAndYourResearch.html
 
 I will write a summary once I finish reading it.
 
+**Update**
+After having worked at Los Alamos and eventually joining Bell labs,
+Hamming wanted to know what made the difference between those who
+do great research and those who don't. Great here means something
+"Nobel-prize worthy" even if it doesn't actually win the prize itself.
+He had been colleagues with Shannon, Openheimer, Hans Bethe, Fermi
+et al.
+
+"Luck favors the prepared mind." -- Pasteur. There is a whole section
+dedicated to luck and people's perception of its importance in doing
+great science. He stated something intriguing about Einstein as an
+example of great scientists having courageous, independent thoughts.
+At the age of 12-14 Einstein had thought about what light would look
+like if the observer was traveling at the speed of light. From
+a Galilean frame he would see a stationary local extrema in vacuum,
+which is unphysical. Was it luck that he finally created STR?
+
+Moving on from luck to brains. Hamming said that doing great
+work requires something more than "mere brains". By brains he meant
+abstract reasoning ability. He gave the example of Bill Pfann, how his eventual success begain with him not knowing much mathematics and being inarticulate. But, once taught to run computers, he eventually
+won all the prizes in his field. He became much more productive with increasing achievement.
+
+Courage. The courage to believe that you can do important problems. Shannon's example...
 ## Optimization Techniques for GPU Programming
 New paper dropped -- [https://dl.acm.org/doi/pdf/10.1145/3570638](https://dl.acm.org/doi/pdf/10.1145/3570638). 74 pages in total,
 26 pages of main content, remaining is appendix and references. This is a survey of 450(!) papers. It covers optimizations that GPU
