Notes from GPU Optimization Techniques

--- a/2023.md
+++ b/2023.md
@@ -321,3 +321,71 @@ of "Functional Differential Geometry", but turns out they're quite different.
 
 It would be nice to have scmutils in some form in Julia. Using Symbolics.jl? Or macros? A bit of both? I do not know which approach will be "good".
 Maybe I will try experimenting with them sometime soon $^\text{TM}$.
+
+# 2023-01-21
+## A Quick Reference for Numerical Analysis
+If you are working in Numerical Analysis or related fields, you probably want this in your back pocket.
+
+https://github.com/higham/what-is
+
+You probably already knew about this.
+
+## Notes from GPU Optimization Techniques
+A few days back I mentioned [this paper](https://dl.acm.org/doi/pdf/10.1145/3570638).
+
+### Balancing Parameters for Performance
+It's evident that there are a lot of kernel parameters to balance. The popular guideline is (if not was) to maximize occupancy, and the
+CUDA SDK comes with a whole occupancy-calculator spreadsheet. But, Volkov states that occupancy is only a measure of TLP utilization and
+completely ignores ILP -- it is possible to achieve more FLOPS and lower occupancy. Low occupancy is even required for some kernels' perf.
+
+If the number of registers per block is too high, then fewer blocks are active simultaneously as not enough hardware registers might be
+available to service all the blocks.
+
+The authors present a few categories as guidelines for presenting the optimizations themselves. The exact membership
+of an optimizing transformation can be fuzzy sometimes.
+- Memory Access
+  - On-Chip
+  - Off-Chip
+- Irregularity -- this is probably going to be important for my thesis
+- Balancing
+  - Instruction Stream
+  - Parallelism
+  - Synchronization
+- Host-interaction
+
+### Memory Access
+Texture memory is optimized for spatial locality in 2D. I wonder if recent SDKs have data structures, if not the architecture having
+dedicated hardware, for optimized spatial locality in higher dimensions. I recall seeing something like surface memory 3D in the doxygen'd man pages
+somewhere, but anyway I digress.
+
+**Texture memory** can be used for handling boundary values (sometimes called ghost or halo cells?), which makes sense since they're
+optimized for 2D sptial locality.
+In general texture memory can be used to improve uncoalesced access. Consider browsing the mentioned references.
+
+An interesting detail about shared memory that I seem to have missed -- **synchronization at shared mem access occurs using barriers** at the
+block-level, which naturally _stalls warps_. Potential optimization: decrease the shared mem block size,  allow multiple thread blocks to run
+on a single SM.
+
+For bank conflicts -- padding is the standard optimisation technique. Bernstein et al wrote a search tool that assigns threads with data
+such that almost all bank conflicts are eliminated. Other techniques include reordering data, remapping threads to data, exploiting commutativity.
+
+Man, these are so many optimizations and so many references I'll have to talk to Ben to be able to pick and choose wisely.
+
+Use warp functions (voting, shuffle, maybe newer instructions in newer arch versions?) for thread-cooperative operations like reductions and
+prefix-sum  without going through shared memory.
+
+**TODO:** Check if cuda-samples covers this usage of shuffle functions
+
+**TODO:** I did not quite understand this next subsection on register blocking and need to look further into references.
+
+**Register blocking** -- registers are best for temporal locality, but not spatial locality as inter-thread comms via only registers is
+restricted to warp-shuffle functions. _Register blocking is highly related to _loop unrolling_ and _varying the work per thread_, because
+the same data is reused for multiple elements that a thread computes.
+
+There's even template metaprogramming (TMP) techniques for controlling arrays of registers. Do I want to learn TMP? No. Will I have to? No. Would it be fun replicating it in Julia macros? Possibly. Do I have time for it? Probably not. 
+
+Aside: the "heteroschedastic" presentation in performance engineering had mentioned this exact optimisation if I recall correctly -- varying
+the work per thread, something along the lines of that a warp just wants work to do all the time Rush B no ~stall~ stop. 
+
+Anyway, **TODO:** I should look into the references for register blocking and usages of texture memory as they might be important for
+domain decomposition kernels.
