--- a/2023.md
+++ b/2023.md
@@ -389,3 +389,84 @@ the work per thread, something along the lines of that a warp just wants work to
 
 Anyway, **TODO:** I should look into the references for register blocking and usages of texture memory as they might be important for
 domain decomposition kernels.
+
+# 2023-01-22
+
+## Callgraphs with Type Stability information in Julia
+I hope this is the most apt description of this package. [Chthulhu.jl](https://github.com/JuliaDebug/Cthulhu.jl). The descend function and
+the `@descend` macro allow you to interactive explore the information spat out by `@code_typed`, go deeper into specific calls, ascend from calls
+as and when you like instead of trying to parse the entire output of `@code_typed` or `@code_warntype` all at once.
+
+I implemented a very hacky way of broadcasting for a custom struct struct that `<: AbstractArray`. We had hooked a custom kernel instead
+of completely implementing generalized broadcasting because it is a bit tricky for our type -- it is logically partitioned with duplicated
+entries.
+
+So, I wanted to check if my custom kernel was being called by the broadcasting machinery while also looking at type stability information.
+The first thing I learned is that the dot syntax for broadcasting reduces to multiple function calls instead of just once, which is why
+you cannot use `Cthulhu.@descend` directly.
+```
+julia> Cthulhu.@descend x .+= a .* y
+ERROR: expression is not a function call, or is too complex for @descend_code_typed to analyze; break it down to simpler parts if possible. In some cases, you may want to use Meta.@lower.
+Stacktrace:
+ [1] error(s::String)
+   @ Base ./error.jl:35
+ [2] top-level scope
+   @ REPL[5]:1
+```
+Using `Meta.@lower`
+```
+julia> Meta.@lower x .+= a .* y
+:($(Expr(:thunk, CodeInfo(
+    @ none within `top-level scope`
+1 ─ %1 = Base.broadcasted(*, a, y)
+│   %2 = Base.broadcasted(+, x, %1)
+│   %3 = Base.materialize!(x, %2)
+└──      return %3
+))))
+
+```
+So, this particular kernel is three calls - two to construct the "expression template" (C++ parlance, from TMP), one to traverse and compute it. In this
+case, `Cthulhu.@descend` would have to be applied on the `materialize` call. 
+
+```
+julia> Meta.@lower x .+= α .* r
+:($(Expr(:thunk, CodeInfo(
+    @ none within `top-level scope`
+1 ─ %1 = Base.broadcasted(*, α, r)
+│   %2 = Base.broadcasted(+, x, %1)
+│   %3 = Base.materialize!(x, %2)
+└──      return %3
+))))
+
+julia> bc1 = Base.broadcaste^C
+
+julia> bc1 = Broadcast.broadcasted(*, α, r)
+Base.Broadcast.Broadcasted(*, (2.0, [2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0  …  2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0]))
+
+julia> bc = Broadcast.broadcasted(+, x, bc1)
+Base.Broadcast.Broadcasted(+, ([1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], Base.Broadcast.Broadcasted(*, (2.0, [2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0  …  2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0, 2.0]))))
+```
+
+```
+julia> Cthulhu.@descend Broadcast.materialize!(x, bc)
+materialize!(dest, bc::Base.Broadcast.Broadcasted{Style}) where Style in Base.Broadcast at broadcast.jl:867
+...
+<<< Truncated output >>>
+...
+    14 ─ %28 = %new(Base.Broadcast.Broadcasted{Nothing, Tuple{DD.DDGlue}, typeof(+), Tuple{DDVector{Float64}, Base.Broadcast.Broadcasted{Base.Broadcast.ArrayStyle{DDVector}, Nothing, typeof(*), Tuple{Float64, DDVector{Float64}}}}}, +, %1, %3)::Base.Broadcast.Broadcasted{Nothing, Tuple{DD.DDGlue}, typeof(+), Tuple{DDVector{Float64}, Base.Broadcast.Broadcasted{Base.Broadcast.ArrayStyle{DDVector}, Nothing, typeof(*), Tuple{Float64, DDVector{Float64}}}}}
+    │    %29 = invoke Base.Broadcast.copyto!(dest::DDVector{Float64}, %28::Base.Broadcast.Broadcasted{Nothing, Tuple{DD.DDGlue}, typeof(+), Tuple{DDVector{Float64}, Base.Broadcast.Broadcasted{Base.Broadcast.ArrayStyle{DDVector}, Nothing, typeof(*), Tuple{Float64, DDVector{Float64}}}}})::DDVector{Float64}
+    └───       goto #15                                                                           ││
+    15 ─       return %29                                                                         │
+Select a call to descend into or ↩ to ascend. [q]uit. [b]ookmark.
+Toggles: [o]ptimize, [w]arn, [h]ide type-stable statements, [d]ebuginfo, [r]emarks, [e]ffects, [i]nlining costs, [t]ype annotations, [s]yntax highlight for Source/LLVM/Native.
+Show: [S]ource code, [A]ST, [T]yped code, [L]LVM IR, [N]ative code
+Actions: [E]dit source code, [R]evise and redisplay
+Advanced: dump [P]arams cache.
+ • %7 = invoke _bcsm(::DD.DDGlue,::DD.DDGlue)::Bool
+   %18 = invoke _bcsm(::DD.DDGlue,::DD.DDGlue)::Bool
+   %29 = invoke copyto!(::DDVector{…},::Broadcasted{…})::DDVector{Float64}
+   ↩
+```
+
+I wish I could show it in all its full-color glory. You are now in an interactive session and can choose to descend into any one of those three
+function calls as shown at the end.
