--- a/2023.md
+++ b/2023.md
@@ -393,7 +393,7 @@ domain decomposition kernels.
 # 2023-01-22
 
 ## Callgraphs with Type Stability information in Julia
-I hope this is the most apt description of this package. [Chthulhu.jl](https://github.com/JuliaDebug/Cthulhu.jl). The descend function and
+I hope this is the most apt description of this package. [Cthulhu.jl](https://github.com/JuliaDebug/Cthulhu.jl). The descend function and
 the `@descend` macro allow you to interactive explore the information spat out by `@code_typed`, go deeper into specific calls, ascend from calls
 as and when you like instead of trying to parse the entire output of `@code_typed` or `@code_warntype` all at once.
 
