--- a/2023.md
+++ b/2023.md
@@ -470,3 +470,13 @@ Advanced: dump [P]arams cache.
 
 I wish I could show it in all its full-color glory. You are now in an interactive session and can choose to descend into any one of those three
 function calls as shown at the end.
+
+## Dijkstra's Algorithm 
+I admit that my intuition of graph algorithms is really bad inspite of trying to study them and all. This sucks, but I guess I have to stick
+with it for longer (when the opportunity presents itself). That being said, TIL that [Dijkstra conceived of his SSSP algorithm without pen and paper](https://en.wikipedia.org/wiki/Dijkstra%27s_algorithm#History). From the Wikipedia article:
+
+> What is the shortest way to travel from Rotterdam to Groningen, in general: from given city to given city. It is the algorithm for the shortest path, which I designed in about twenty minutes. One morning I was shopping in Amsterdam with my young fiancée, and tired, we sat down on the café terrace to drink a cup of coffee and I was just thinking about whether I could do this, and I then designed the algorithm for the shortest path. As I said, it was a twenty-minute invention. In fact, it was published in '59, three years later. The publication is still readable, it is, in fact, quite nice. One of the reasons that it is so nice was that I designed it without pencil and paper. I learned later that one of the advantages of designing without pencil and paper is that you are almost forced to avoid all avoidable complexities. Eventually, that algorithm became to my great amazement, one of the cornerstones of my fame.
+
+(in an interview with Philip L. Frana of the Communications of the ACM).
+
+What a baller.
