Add courses to reading list
And a few udpates to the daybook I do not remember what e
And a few udpates to the daybook I do not remember what exactly

--- a/2023.md
+++ b/2023.md
@@ -480,3 +480,45 @@ with it for longer (when the opportunity presents itself). That being said, TIL 
 (in an interview with Philip L. Frana of the Communications of the ACM).
 
 What a baller.
+
+# 2023-01-23
+## The Xennial Hunt
+I saw [this](hunt.reaktor.com) in the ads on the Advent of Code website during the 2022 event. Solve problems with old-school way. Reminded
+me of the descriptions of programming in their childhood given by Matt Godbolt, John Carmack et al. I was done solving level-1 sometime
+during AoC2022, level-2 requires building a maze-solver with (what I assume is) very limited memory and a copy of an issue of BYTE Magazine
+where you look for the article on robot rats solving mazes. Would love to continue working on this sometime next month.
+
+# 2023-01-26
+Oh wow it has been 3 days since the last update. The days are long,
+but the years fly by or something along those lines.
+
+## Basics of Java kekw
+Anyway. I am a Java novice. As it turns out its declaration syntax
+is slightly better than that of C, at least for array primitives,
+if they can be called primitives in Java.
+```java
+class Demo {
+    public static void main(String args[]) {
+        // why is `Integer.parseInt` not simply called `Integer.parse`?
+        // I guess people like their splat imports or something
+        int length = Integer.parseInt(args[i]);
+
+        // this is how you create an array of objects
+        // the type is almost completely specified at the left
+        // of the identifier
+        int[] arr = new int[length];
+        for (int i = 0; i < arr.length; i++) {
+            arr[i] = somethingSomethingRandomIntegerFactoryTemplateGenerator();
+        }
+        // are these also called "range-based" for loops?
+        for (int i: data) {
+            // `PrintStream.println` has overloads for all primitives
+            // Yeah method overloading is supported in Java
+            System.err.println(i);
+        }
+
+        // no explicit destructor calls because GC
+        return 0;
+    }
+}
+```
