--- a/2023.md
+++ b/2023.md
@@ -522,3 +522,33 @@ class Demo {
     }
 }
 ```
+
+# 2023-02-10
+## A YouTube Channel for Advanced C Programming
+[Finally some advanced C content](https://www.youtube.com/@eskilsteenberg) that I can actually learn something from. Most videos seem
+to be long form. BTW Steenberg is a member of WG14. 
+
+## FEM -- some linsolves are equivalent to BVP solves
+My intuition of the finite element method seems somewhat shaky. I want to go over some derivations once. I had studied this from
+Larson and Bengzon's FEM book, trying to reproduce on my own.
+
+Steps to derive the Green's identity that is required to go from strong form to weak form for elliptic(?) BVPs.
+1. Start with divergence theorem, $i^{\text{th}}$ component.
+2. Let $f \to fg$
+3. Let $f \to w_i$, the $i^{\text{th}}$ component of a vector field $\mathbf{w}$
+4. Sum over $i$, write in vector form
+5. $w \to -\nabla u$
+
+The final identity is
+$$-\int_\Omega\Delta u v dx = \int_\Omega \nabla u \cdot \nabla v dx - \int_{\patial\Omega} n \cdot \nabla u v ds$$
+
+The authors present a really nice BVP with some coefficients that you can tweak to get the Neumann/Dirichlet cases back.
+
+\begin{equation}
+    \begin{cases}
+        -\nabla \cdot (a \nabla u) = f, \quad \Omega\\
+        -n\cdot(a\nabla u) = \kappa(u - g_D) - g_N, \quad \partial \Omega
+    \end{cases}
+\end{equation}
+
+Let's push this much to see if things actually render?
