change env to inline math

--- a/2023.md
+++ b/2023.md
@@ -540,15 +540,15 @@ Steps to derive the Green's identity that is required to go from strong form to 
 5. $w \to -\nabla u$
 
 The final identity is
-$$-\int_\Omega\Delta u v dx = \int_\Omega \nabla u \cdot \nabla v dx - \int_{\patial\Omega} n \cdot \nabla u v ds$$
+$$-\int_\Omega\Delta u v dx = \int_\Omega \nabla u \cdot \nabla v dx - \int_{\partial\Omega} n \cdot \nabla u v ds$$
 
 The authors present a really nice BVP with some coefficients that you can tweak to get the Neumann/Dirichlet cases back.
 
-\begin{equation}
+$$
     \begin{cases}
         -\nabla \cdot (a \nabla u) = f, \quad \Omega\\
         -n\cdot(a\nabla u) = \kappa(u - g_D) - g_N, \quad \partial \Omega
     \end{cases}
-\end{equation}
+$$
 
 Let's push this much to see if things actually render?
