Time to learn math

--- a/2023.md
+++ b/2023.md
@@ -551,4 +551,12 @@ $$
     \end{cases}
 $$
 
-Let's push this much to see if things actually render?
+Multiply by test function and integrate, then apply the Green's above.
+
+$$
+\int_\Omega (-\nabla \cdot (a \nabla u))v dx = \int_\Omega fvdx
+$$
+$$
+\implies \ldots
+$$
+Man typesetting without snippets takes too long... I need to set up LuaSnippets soon or I'll be struggling with my thesis. 
